# sporse

./: Cargo.toml  LICENSE-MIT  README.md
.github/: settings.yml
.github/workflows/: ci.yml
benches/: search.rs
examples/: basic.rs
src/: lib.rs  posting.rs  wand.rs
