[package]
name = "sporse"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
description = "Sparse vector index for learned sparse retrieval (SPLADE, LADE)"
repository = "https://github.com/arclabs561/sporse"
homepage = "https://github.com/arclabs561/sporse"
documentation = "https://docs.rs/sporse"
keywords = ["sparse", "retrieval", "splade", "search", "ann"]
categories = ["algorithms", "data-structures"]

[workspace]

[dependencies]
